// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-file-beta #render should render component as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-file-beta>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-form-field-error-i" aria-invalid="true" id="avatar" name="avatar" slot="input" type="file">
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when an optional "error" slot is provided and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-form-field-error-i" aria-invalid="true" id="avatar" name="avatar" slot="input" type="file">
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-file-beta>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-form-field-help-i" id="avatar" name="avatar" slot="input" type="file">
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when an optional "help" slot is provided and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-form-field-help-i" id="avatar" name="avatar" slot="input" type="file">
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-file-beta>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-label-info-beta-i" id="avatar" name="avatar" slot="input" type="file">
  <gux-label-info-beta id="gux-label-info-beta-i" slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when an optional "label-info" slot is provided and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-label-info-beta-i" id="avatar" name="avatar" slot="input" type="file">
  <gux-label-info-beta id="gux-label-info-beta-i" slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-file-beta indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when indicator-mark is "optional" and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="" indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when indicator-mark is "required" 1`] = `
<gux-form-field-file-beta indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when indicator-mark is "required" and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="" indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when input attribute is "disabled" 1`] = `
<gux-form-field-file-beta>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="true" class="gux-disabled gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button disabled="" tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" disabled="" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when input attribute is "disabled" and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="true" class="gux-disabled gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button disabled="" tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" disabled="" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when input attribute is "multiple" 1`] = `
<gux-form-field-file-beta>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload files
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" multiple="" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when input attribute is "multiple" and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop files here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" multiple="" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when input attribute is "required" 1`] = `
<gux-form-field-file-beta>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label gux-required">
        <slot name="label"></slot>
        <gux-form-field-label-indicator required="" variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" required="" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when input attribute is "required" and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label gux-required">
        <slot name="label"></slot>
        <gux-form-field-label-indicator required="" variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" required="" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when label-position is above 1`] = `
<gux-form-field-file-beta label-position="above">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when label-position is above and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="" label-position="above">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when label-position is beside 1`] = `
<gux-form-field-file-beta label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when label-position is beside and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="" label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when label-position is screenreader 1`] = `
<gux-form-field-file-beta label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container">
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Upload file
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;

exports[`gux-form-field-file-beta #render should render component as expected when label-position is screenreader and drop-and-drag is enabled 1`] = `
<gux-form-field-file-beta drag-and-drop="" label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
        <div aria-disabled="false" class="gux-drop-container gux-drop-zone">
          <div class="gux-drag-and-drop-text">
            Drag and drop a file here or
          </div>
          <div class="gux-proxy-button">
            <gux-button-slot accent="tertiary">
              <button tabindex="-1" type="button">
                <div>
                  Click to upload
                </div>
              </button>
            </gux-button-slot>
            <div class="gux-offscreen">
              <slot name="input"></slot>
            </div>
          </div>
        </div>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file-beta>
`;
